# Ghostwriter

./: .gitignore  CMakeLists.txt  README.md
config/: FlagConfig.hpp  WordApiConfig.hpp
lib/curl/lib/cmake/CURL/: CURLConfigVersion.cmake
lib/curl/lib/pkgconfig/: libcurl.pc
src/: ghostwriter.cpp  main.cpp
src/CLIArgumentContainer/: CLIArgumentContainer.cpp  CLIArgumentContainer.hpp
src/CLIArgumentHolder/: CLIArgumentHolder.cpp  CLIArgumentHolder.hpp
src/CLIArgumentParser/: CLIArgumentParser.cpp  CLIArgumentParser.hpp
src/OutputWriter/: OutputWriter.cpp  OutputWriter.hpp
src/SynonymFinder/: SynonymFinder.cpp  SynonymFinder.hpp
src/TextParaphraser/: TextParaphraser.cpp  TextParaphraser.hpp
src/config/: FlagConfig.hpp  WordApiConfig.hpp
src/paraphraseText/: paraphraseText.cpp  paraphraseText.hpp
src/util/JSONObjectHasKey/: JSONObjectHasKey.cpp  JSONObjectHasKey.hpp
src/util/JSONUtils/: ObjectHasKey.cpp  ObjectHasKey.hpp
src/util/findSynonymsOfWord/: findSynonymsOfWord.cpp  findSynonymsOfWord.hpp
src/util/readFile/: readFile.cpp  readFile.hpp
src/writeOutputText/: writeOutputText.cpp  writeOutputText.hpp
tests/: CLIArgumentContainerTests.cpp  CMakeLists.txt  tests.cpp
tests/CLIArgumentContainerTests/: CLIArgumentContainerTests.cpp
tests/CLIArgumentHolderTests/: CLIArgumentHolderTests.cpp
tests/TextParaphraserTests/: TextParaphraserTests.cpp
tests/paraphraseTextTests/: paraphraseTextTests.cpp
tests/util/createDummyCLIArgContainer/: createDummyCLIArgContainer.cpp  createDummyCLIArgContainer.hpp
tests/util/createDummyCLIArgHolder/: createDummyCLIArgHolder.cpp  createDummyCLIArgHolder.hpp
tests/writeOutputTextTests/: writeOutputTextTests.cpp
